--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <h1>SRFI 139: Syntax parameters</h1>
     <p class="authors">by Marc Nieper-Wißkirchen</p>
-    <p class="status">status: <em>final</em> (2016/10/2)</p>
+    <p class="status">status: <em>final</em> (2016-10-02)</p>
 
     <ul class="info">
       <li><a href="srfi-139.html">The SRFI Document</a></li>
