--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p class="authors">by Marc Nieper-Wißkirchen</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2016-10-02)</p>
+    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=binding][Binding]], [[https://srfi.schemers.org/?keywords=parameters][Parameters]]</p>
 
     <ul class="info">
       <li><a href="srfi-139.html">The SRFI Document</a></li>
