Update information about sample implementations.

--- a/srfi-139.html
+++ b/srfi-139.html
@@ -192,17 +192,12 @@ parameters, rather than creating new bindings.
 
 <h1>Implementation</h1>
 
-<p>
-A sample implementation for an implementation of the R7RS is provided in form
-of the <a href="https://gitlab.com/nieper/rapid-scheme">Rapid Scheme</a>
-implementation, which implements this SRFI in the
-<code>(rapid syntax-parameters)</code> library. This implementation will follow
-any future changes in this specification.
-</p>
+<p>A sample implementation is provided by the
+<a href="https://www.unsyntax.org">Unsyntax Scheme implementation</a>,
+which implements this SRFI in the <code>(srfi 139)</code> library.</p>
 
-<p>
-Syntax parameters are also being implemented, at least, by Guile and Racket.
-</p>
+<p>Syntax parameters are also implemented by, at least, Chibi-Scheme,
+Guile, and Racket.</p>
 
 <h1>Acknowledgements</h1>
 
