Follow US Copyright Office recommendations.

--- a/srfi-139.html
+++ b/srfi-139.html
@@ -210,8 +210,8 @@ shamelessly reused for this SRFI.
 Much of this specification is likewise derived from the Guile
 Reference Manual and the Racket documentation.
 
-<h1>Copyright</h1>
-Copyright (C) Marc Nieper-Wi&szlig;kirchen (2016).  All Rights Reserved. 
+<h2>Copyright</h2>
+&copy; 2016 Marc Nieper-Wi&szlig;kirchen.  All Rights Reserved.
 
 <p>
   Permission is hereby granted, free of charge, to any person
