--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="authors">by Marc Nieper-Wißkirchen</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2016-10-02)</p>
-    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=binding">Binding</a>, <a href="https://srfi.schemers.org/?keywords=parameters">Parameters</a></p>
+    <p class="keywords">keywords: <a href="https://srfi.schemers.org/?keywords=binding">Binding</a>, <a href="https://srfi.schemers.org/?keywords=parameters">Parameters</a></p><span class="see-also">See also <a href="/srfi-211/">SRFI 211: Scheme Macro Libraries</a>.</span>
 
     <ul class="info">
       <li><a href="srfi-139.html">The SRFI Document</a></li>
